constraints/containers_must_be_limited.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpu: "2500m"
    memory: "8Gi"
