constraints/liveness_probe.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sLivenessProbe
metadata:
  name: liveness-probe
