constraints/privileged_pod.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sPrivilegedPod
metadata:
  name: privileged-pod
