constraints/readiness_probe.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sReadinessProbe
metadata:
  name: readiness-probe
