constraints/unique_service_selector.yaml
apiVersion: constraints.gatekeeper.sh/v1alpha1
kind: K8sUniqueServiceSelector
metadata:
  name: unique-service-selector
